--- a/package.json
+++ b/package.json
@@ -27,5 +27,14 @@
     "morgan": "^1.9.1",
     "pg": "^7.4.3",
     "validator": "^10.7.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^9.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "nodemon": "^1.18.4"
   }
 }
