--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A food-ordering service app for a restaurant",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon server/app.js --exec babel-node"
   },
   "repository": {
     "type": "git",
