--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "globals": {
+      "window": true,
+      "document": true,
+      "localStorage": true,
+      "fetch": true,
+      "Request": true,
+      "describe": true,
+      "it": true
+    }
 }
