--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A food-ordering service app for a restaurant",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set NODE_ENV=test&& mocha --exit --require babel-register --require babel-polyfill server/tests/index.js",
     "start":"nodemon server/app.js --exec babel-node"
   },
   "repository": {
