[Bug #160477800] Integrate code-climates test coverage reporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
   - "6"
 env: 
   global:
+    - CODECLIMATE_REPO_TOKEN=ab3030c12b4ee8adb4e2e37093c2240b79f3a4b9c6c55d3d7617cd77a3aff854
     - NODE_ENV=test
 branches:
   except:
