--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A food-ordering service app for a restaurant",
   "main": "index.js",
   "scripts": {
-    "test": "set NODE_ENV=test&& mocha --exit --require babel-register --require babel-polyfill server/Tests/index.js",
     "start":"nodemon server/app.js --exec babel-node",
+    "build": "babel server/ -d dist",
+    "host-on-heroku":"npm run build && node dist/app.js",
+    "test": "set NODE_ENV=test&& mocha --exit --require babel-register --require babel-polyfill server/Tests/index.js",
     "test-coverage": "set NODE_ENV=test&& babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --exit server/Tests/index.js",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | coveralls"
   },
