--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A food-ordering service app for a restaurant",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon server/app.js --exec babel-node",
+    "start": "nodemon server/app.js --exec babel-node",
     "build": "babel server/ -d dist",
-    "host-on-heroku":"npm run build && node dist/app.js",
+    "host-on-heroku": "npm run build && node dist/app.js",
     "test": "set NODE_ENV=test&& mocha --exit --require babel-register --require babel-polyfill server/Tests/index.js",
     "test-coverage": "set NODE_ENV=test&& babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --exit server/Tests/index.js",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | coveralls"
@@ -30,8 +30,7 @@
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
-    "pg": "^7.4.3",
-    "validator": "^10.7.1"
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -46,6 +45,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "validator": "^10.7.1"
   }
 }
