--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai-http": "^4.2.0",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
+    "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
