--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "validator": "^10.7.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -46,7 +47,6 @@
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.18.4",
-    "validator": "^10.7.1"
+    "nodemon": "^1.18.4"
   }
 }
