--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^4.6.8",
     "pg": "^7.4.3",
     "validator": "^10.7.1"
   },
