[Feature #160619267] Secure routes with jWT

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Daymorelah/orderMeal#readme",
   "dependencies": {
     "babel-istanbul": "^0.12.2",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
