[Bug #160619267] Fix bug causing travis to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,13 @@ env:
   global:
     - CODECLIMATE_REPO_TOKEN=ab3030c12b4ee8adb4e2e37093c2240b79f3a4b9c6c55d3d7617cd77a3aff854
     - NODE_ENV=test
+    - SECRET='sOmeS23E45gBnu*6F7K*T%y^sN*'
 branches:
   except:
   - gh-pages
   - master
+before_script:
+  - psql -c 'CREATE DATABASE travis;' -U postgres
 script:
   - npm test
 after_success: 
