[Bug #160619267] Fix bug causing travis to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ branches:
   except:
   - gh-pages
   - master
+before_script:
+  - psql -c 'CREATE DATABASE travis;' -U postgres
 script:
   - npm test
 after_success: 
