[Bug #160619267] Fix bug causing travis to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   global:
     - CODECLIMATE_REPO_TOKEN=ab3030c12b4ee8adb4e2e37093c2240b79f3a4b9c6c55d3d7617cd77a3aff854
     - NODE_ENV=test
+    - SECRET='rtGF6%6HYh&HU*6759£tfbhbKo(^4"sW3£2%'
 branches:
   except:
   - gh-pages
