--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
       "fetch": true,
       "Request": true,
       "describe": true,
-      "it": true
+      "it": true,
+      "before": true
     }
 }
