[Chore #160869535] Document API with swagger
- Install swagger-UI-dist via npm
- Import swagger specification document in json format
- Serve static assets for the documentation from the app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,10 @@
       "document": true,
       "localStorage": true,
       "fetch": true,
-      "Request": true,
-      "describe": true,
-      "it": true,
-      "before": true
+      "Request": true
+    },
+    "env": {
+      "mocha": true,
+      "browser": true
     }
 }
