--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
     "pg": "^7.4.3",
+    "swagger-ui-dist": "^3.19.1",
     "validator": "^10.7.1"
   },
   "devDependencies": {
