[Feature #160886027]Power signup page with backend
- connect front-end and back-end
- Update contents of front-end with back-end

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,9 @@
       "describe": true,
       "it": true,
       "before": true
-    }
+    },
+    "env":{
+      "browser": true,
+      "node": true
+  }
 }
