--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "nodemon server/app.js --exec babel-node",
     "build": "babel server/ -d dist",
     "host-on-heroku": "npm run build && node dist/app.js",
-    "test": "set NODE_ENV=test&& npm run models-for-testing && mocha --exit --require babel-register --require babel-polyfill server/Tests/index.js",
-    "test-coverage": "set NODE_ENV=test&& npm run models-for-testing && babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --exit server/Tests/index.js",
+    "test": "export NODE_ENV=test&& npm run models-for-testing && mocha --exit --require babel-register --require babel-polyfill server/Tests/index.js",
+    "test-coverage": "export NODE_ENV=test&& npm run models-for-testing && babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --exit server/Tests/index.js",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | coveralls",
     "models": "babel-node server/Model",
-    "models-for-testing": "set NODE_ENV=test&& babel-node server/Model"
+    "models-for-testing": "export NODE_ENV=test&& babel-node server/Model"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,9 @@
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "coveralls": "^3.0.2",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
