Refactor the codebase

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ dist
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 .vscode
+.DS_Store
 
 # Bower dependency directory (https://bower.io/)
 bower_components
