Created an App on google via the google dev console Added relevant keys to the app Configured startegies for authentication using passport Change package manager from npm to yarn

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server/app.js --exec babel-node",
     "build": "babel server/ -d dist",
     "host-on-heroku": "npm run build && node dist/app.js",
-    "test": "export NODE_ENV=test&& npm run models-for-testing && mocha --exit --require babel-register --require babel-polyfill server/Tests/index.js",
+    "test": "export NODE_ENV=test&& npm run models-for-testing && mocha --exit --require @babel/register --require @babel/polyfill server/Tests/index.js",
     "test-coverage": "export NODE_ENV=test&& npm run models-for-testing && babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --exit server/Tests/index.js",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | coveralls",
     "models": "babel-node server/Model",
@@ -24,26 +24,36 @@
   },
   "homepage": "https://github.com/Daymorelah/orderMeal#readme",
   "dependencies": {
-    "babel-istanbul": "^0.12.2",
+    "@babel/polyfill": "^7.2.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.16.2",
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.4.3",
     "swagger-ui-dist": "^3.19.1",
     "validator": "^10.7.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.1.2",
+    "@babel/node": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.1",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@babel/runtime": "^7.4.5",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "coveralls": "^3.0.2",
