--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel server/ -d dist",
     "host-on-heroku": "npm run build && node dist/app.js",
     "test": "export NODE_ENV=test&& npm run models-for-testing && mocha --exit --require @babel/register --require @babel/polyfill server/Tests/index.js",
-    "test-coverage": "export NODE_ENV=test&& npm run models-for-testing && babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --exit server/Tests/index.js",
+    "test-coverage": "export NODE_ENV=test&& npm run models-for-testing && nyc mocha --exit --require @babel/register --require @babel/polyfill server/Tests/index.js",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | coveralls",
     "models": "babel-node server/Model",
     "models-for-testing": "export NODE_ENV=test&& babel-node server/Model"
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Daymorelah/orderMeal#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
+    "@sendgrid/mail": "^6.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -50,10 +50,12 @@
     "@babel/plugin-proposal-class-properties": "7.3.0",
     "@babel/plugin-proposal-object-rest-spread": "7.3.1",
     "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "@babel/runtime": "^7.4.5",
+    "babel-istanbul": "^0.12.2",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "coveralls": "^3.0.2",
@@ -64,6 +66,8 @@
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "nyc": "^14.1.1",
+    "sinon": "^7.3.2"
   }
 }
