--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sendgrid/mail": "^6.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -34,6 +35,7 @@
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
